<resources>
    <string name="app_name">JFTracker</string>

    <string name="lbl_setting">Setting</string>
    <string name="lbl_history">History</string>
    <string name="lbl_home">Home</string>
    <string name="minus">-</string>
    <string name="iv_content_desc">iv expense type</string>

    <string name="e_t_food">Food</string>
    <string name="e_t_transport">Transport</string>
    <string name="e_t_clothes">Clothes &amp; shoes</string>
    <string name="e_t_deposit">Deposit</string>
    <string name="e_t_activities">Any Activities</string>
    <string name="e_t_groceries">Groceries</string>

    <string name="def_date">01.04.2018</string>
    <string name="def_sum">0</string>
    <string name="def_currency">C</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_spinner_hint">Pick a type</string>
    <string name="def_month">January</string>
    <string name="def_devider">/</string>
    <string name="def_year">2018</string>
    <string name="et_hint_amount">Amount</string>
    <string name="btn_lbl_update">Update</string>
</resources>
