<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/lbl_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_home">
    </item>
    <item
        android:id="@+id/nav_history"
        android:title="@string/lbl_history"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_history">
    </item>

    <item
        android:id="@+id/nav_setting"
        android:title="@string/lbl_setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_settings">
    </item>

</menu>