<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="7dp">

    <TextView
        android:id="@+id/tvListType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_weight="4"
        android:text="@string/e_t_groceries"
        android:textColor="@color/primaryText"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvListAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/def_sum"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/def_currency"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>

