<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/dialog_vertical_margin"
    android:paddingRight="@dimen/dialog_vertical_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_hint_amount"
        android:inputType="numberSigned" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/btrSpnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_enableFloatingLabel="false"
        app:ms_alignLabels="false"
        app:ms_hint="@string/lbl_spinner_hint"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/lbl_add"
        android:textColor="@android:color/white"
        tools:targetApi="lollipop" />
</LinearLayout>